# enm

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  rust.yml
src/: main.rs
src/db/: mod.rs
src/storage/: delete.rs  mod.rs  read.rs  write.rs
src/ui/: create.rs  decrypt.rs  heading.rs  home.rs  list.rs  mod.rs  notes.rs
