[package]
name = "yaepm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
eframe = { version="0.28.1", features=["default","__screenshot"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.120"
sled = "0.34.7"
text_io = "0.1.12"
thiserror = "1.0.62"
zeroize = "1.8.1"
