[package]
name = "enm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
eframe = { version="0.28.1", features=["default","__screenshot"] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
hex-literal = "0.4.1"
image = "0.25.2"
log = "0.4.22"
password-hash = "0.5.0"
pbkdf2 = "0.12.2"
serde = "1.0.204"
serde_json = "1.0.120"
sha2 = "0.10.8"
zeroize = {version="1.8.1", features=["zeroize_derive"]}
